# turtlico

./: .env  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  Cargo.toml  README.md  Readme.md  build-appimage.sh  com.orsan.Turtlico.json  index.html  io.gitlab.Turtlico.json  io.gitlab.Turtlico.yaml  meson.build  meson_options.txt  tk.turtlico.Turtlico.json  turtlico.in  turtlico_editor.d.ts  turtlico_editor.js  turtlico_editor_bg.wasm.d.ts  update-po.py  wasm-build.sh  wasm-serve.sh  wasm-server.py  worker.js
.github/workflows/: turtlico-web.yml
data/: com.orsan.Turtlico.appdata.xml.in  com.orsan.Turtlico.desktop.in  com.orsan.Turtlico.gschema.xml  io.gitlab.Turtlico.appdata.xml.in  io.gitlab.Turtlico.desktop.in  io.gitlab.Turtlico.gschema.xml  meson.build  tk.turtlico.Turtlico.appdata.xml.in  tk.turtlico.Turtlico.desktop.in  tk.turtlico.Turtlico.gschema.xml  tk.turtlico.Turtlico.xml  turtlico.gresource.xml
data/icons/: meson.build  scale_icons.py
data/plugins/: 0turtle.json  base.json  console.json  meson.build  turtlico.plugins.gresource.xml
data/ui/: app-settings.ui  functions-dialog.ui  iconsview.ui  mainwindow.ui  scene-editor-view.ui  window.ui
doc/: basic_concepts.rst  conf.py.in  examples.rst  index.rst  meson.build  modules.rst  reference_doc.rst  reference_doc_gen.py
doc/examples/: calc.tcp  click-counter.tcp  click.tcp  color.tcp  direct-python.tcp  exceptions.tcp  files-write-input.tcp  files-write.tcp  files.tcp  image.tcp  image.tcp.py  keyboard-mouse.tcp  meson.build  move.tcp  random-move.tcp  scenes.1.tcs  scenes.tcp  sound-player.tcp  soundplayer.tcp  test  test.py  turtle-star.tcp  turtlestar.tcp
doc/figures/: for-loop.xcf
examples/: calculator.tcsf  factorial.tcsf  helloworld.tcsf  keyboard_control.tcsf  numbers.tcsf  objects.tcsf  turtle.tcsf  turtle_block.tcsf  yourname.tcsf
po/: .gitignore  LINGUAS  POTFILES  cs.po  de.po  meson.build  turtlico.pot
src/: app-settings.ui  app-settings.vala  base.json  command.vala  compiler.vala  debugger.vala  functions-dialog.ui  functions-dialog.vala  main.vala  meson.build  mm.json  package-service.vala  program-buffer.vala  program-settings.ui  program-settings.vala  programbuffer.vala  programview.ui  programview.vala  rpi.json  search-widget.ui  search-widget.vala  turtlico.gresource.xml  turtlico.rc  window.ui  window.vala
src/classes/: command.vala  compiler.vala  debugger.vala  package-service.vala  program-buffer.vala  scene-editor.vala
src/icons/: 0_apnd.xcf  0_bf.xcf  0_clr.xcf  0_ef.xcf  0_index.xcf  0_ins.xcf  0_plcimg.xcf  0_rpievent.xcf  0_rpieventoff.xcf  1_while.xcf  3_r.xcf  5_index.xcf  false.xcf  meson.build  python.xcf  true.xcf  turtlico.icons.gresource.xml
src/libturtlico/: command.vala  compiler.vala  meson.build
src/plugins/: 0turtle.json  base.json  mm.json  rpi.json
src/widgets/: code-preview.vala  programview.css  programview.ui  programview.vala  scene-editor-view.vala  search-widget.vala
src/windows/: app-settings.ui  app-settings.vala  functions-dialog.vala  program-settings.ui  program-settings.vala  scene-editor-window.ui  scene-editor-window.vala  window.css  window.ui  window.vala
tests/: binops.tcsf  for.tcsf  funcs.tcsf  objects.tcsf  padding.tcsf  while.tcsf
turtlico/: locale.py  utils.py
turtlico/app/: application.py  debugger.py
turtlico/app/widgets/: __init__.py  icon.py  iconsview.py  programview.py  programviewdataeditor.py
turtlico/app/windows/: mainwindow.py
turtlico/compiler/: __init__.py  base.py  codepiece.py  command.py  legacy.py  projectbuffer.py  utils.py
turtlico/plugins/: base.py  turtle.py
turtlico_editor/: Cargo.toml  build_icons.sh  index.html
turtlico_editor/assets/: index.js  manifest.json  sw.js
turtlico_editor/examples/: keyboard_control.tcpf
turtlico_editor/src/: app.rs  cmdpalette.rs  cmdrenderer.rs  dialogs.rs  dndctl.rs  main.rs  nativedialogs.rs  programview.rs  programviewdialogs.rs  project.rs  tilemapeditor.rs  widgets.rs
turtlicoscript/: Cargo.toml
turtlicoscript/checkargs/: Cargo.toml
turtlicoscript/checkargs/src/: lib.rs
turtlicoscript/src/: ast.rs  error.rs  interpreter.rs  lib.rs  parser.rs  tests.rs  tokens.rs  value.rs
turtlicoscript/src/stdlib/: mod.rs
turtlicoscript_cli/: Cargo.toml
turtlicoscript_cli/src/: main.rs
turtlicoscript_gui/: Cargo.toml
turtlicoscript_gui/blocks_raw/: bricks.xcf  fence.xcf  flower.xcf  grass.xcf  wood.xcf
turtlicoscript_gui/src/: app.rs  lib.rs  sprite.rs  tilemap.rs  worker.rs  world.rs
turtlicoscript_gui/ui/: window.slint
windows/: PKGBUILD  build.bat  build.sh  deploy.sh  pkglist.txt  turtlico.c  turtlico.iss  turtlico.rc
windows/src/: PKGBUILD.in  turtlico.c  turtlico.iss
