[workspace]
members = [
	"turtlicoscript",
	"turtlicoscript_cli",
	"turtlicoscript_gui",
	"turtlico_editor",
]
default-members = ["turtlico_editor"]
resolver = "2"

[workspace.dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", features = [
	"default",
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
egui_extras =  { version = "0.30.0", features = ["image"] }
emath = "0.30.0"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true