[package]
name = "turtlico_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtlicoscript = { version = "0.1.0", path = "../turtlicoscript" }
turtlicoscript_gui = { version = "0.1.0", path = "../turtlicoscript_gui"}

egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui_extras =  { version = "0.22.0", features = ["image", "svg"] }
emath = "0.22.0"
image = { version = "0.24", features = ["jpeg", "png", "bmp", "gif"] }
chrono = "0.4.31"

serde = { version = "1.0", features = ["derive"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"
