[package]
name = "turtlico_editor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtlicoscript = { version = "0.1.0", path = "../turtlicoscript" }
turtlicoscript_gui = { version = "0.1.0", path = "../turtlicoscript_gui"}

egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }
egui_extras =  { version = "0.26.2", features = ["image", "svg", "all_loaders"] }
emath = "0.26.2"
image = { version = "0.24", features = ["jpeg", "png", "bmp", "gif"] }
chrono = "0.4.31"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

rfd = { version = "0.14.0" }
base64 = "0.22.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3.28"
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
gloo = { version = "0.11", features = ["events"]}
js-sys = "0.3"
tracing-wasm = "0.2"
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
