[package]
name = "turtlicoscript_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtlicoscript = { version = "0.1.0", path = "../turtlicoscript" }
turtlicoscript_gui = { version = "0.1.0", path = "../turtlicoscript_gui", optional = true }
slint = { version = "0.3.3", optional = true}

[features]
default = ["gui"]
gui = ["turtlicoscript_gui", "slint"]