[package]
name = "turtlicoscript_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checkargs = { version = "0.1.0", path = "../turtlicoscript/checkargs" }
turtlicoscript = { version = "0.1.0", path = "../turtlicoscript" }