[package]
name = "turtlicoscript_gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
checkargs = { version = "0.1.0", path = "../turtlicoscript/checkargs" }
turtlicoscript = { version = "0.1.0", path = "../turtlicoscript" }
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
egui_extras =  { version = "0.26.2", features = ["image"] }
emath = "0.26.2"
image = { version = "0.24", features = ["jpeg", "png", "bmp", "gif"] }
log = "0.4"
web-sys =  { version = "0.3", features = ["DedicatedWorkerGlobalScope", "ErrorEvent", "Worker", "MessageEvent", "console"] }
js-sys = "0.3.64"
wasm-bindgen = "0.2"
ndarray = "0.15"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"