run_target('scale-icons',
  command : ['data/icons/scale_icons.py', meson.current_source_dir()])

install_data('16x16/tk.turtlico.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/16x16/apps'))
install_data('22x22/tk.turtlico.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/22x22/apps'))
install_data('24x24/tk.turtlico.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/24x24/apps'))
install_data('32x32/tk.turtlico.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/32x32/apps'))
install_data('48x48/tk.turtlico.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/48x48/apps'))
install_data('256x256/tk.turtlico.Turtlico.png',
	     install_dir : join_paths(get_option('datadir'),'icons/hicolor/256x256/apps'))
install_data('scalable/tk.turtlico.Turtlico.svg',
	     install_dir : join_paths(get_option('datadir'),'icons/hicolor/scalable/apps'))
