run_target('scale-icons',
  command : ['data/icons/scale_icons.py', meson.current_source_dir()])

install_data('16x16/io.gitlab.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/16x16/apps'))
install_data('22x22/io.gitlab.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/22x22/apps'))
install_data('24x24/io.gitlab.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/24x24/apps'))
install_data('32x32/io.gitlab.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/32x32/apps'))
install_data('48x48/io.gitlab.Turtlico.png',
             install_dir : join_paths(get_option('datadir'),'icons/hicolor/48x48/apps'))
install_data('256x256/io.gitlab.Turtlico.png',
	     install_dir : join_paths(get_option('datadir'),'icons/hicolor/256x256/apps'))
install_data('scalable/io.gitlab.Turtlico.svg',
	     install_dir : join_paths(get_option('datadir'),'icons/hicolor/scalable/apps'))
